--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,4 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = "http://yhden.fi/"
+languageCode = "en-us"
+title = "Yksi"
+theme = "hermit-v2"
