Using relegion icons instead of social icons

--- a/hugo.toml
+++ b/hugo.toml
@@ -28,7 +28,7 @@ theme = "hermit-v2"
  
 languageCode = "en-us"
 
-# title = "CHANGE ME"
+title = "SAMeri"
 # enableGitInfo = true
 
 pygmentsCodefences  = true
@@ -54,8 +54,8 @@ expiryDate = ["expiryDate"]
 
 
 [params.author]
-  name = "CHANGE SITE AUTHOR"
-  about = "CHANGE SITE AUTHOR ABOUT"
+  # name = "CHANGE SITE AUTHOR"
+  # about = "CHANGE SITE AUTHOR ABOUT"
 
 [blackfriday]
   # hrefTargetBlank = true
@@ -79,17 +79,18 @@ expiryDate = ["expiryDate"]
 
 
 [params]
+  name = "Hermit-V2"
   dateform        = "Jan 2, 2006"
   dateformShort   = "Jan 2"
   dateformNum     = "2006-01-02"
   dateformNumTime = "2006-01-02 15:04 -0700"
 
-  description = "CHANGE ME SITE DESCRIPTION"
+  # description = "YHDEN"
   # images = [""]
   themeColor = "#494f5c"
 
-  # homeSubtitle = "CHANGE ME HOME SUBTITLE"
-  footerCopyright = "CHANGE ME FOOTER COPYRIGHT"
+  homeSubtitle = "Olemme samat, mutta erilaiset"
+  footerCopyright = "This work is licensed under CC BY 4.0"
   # footerHideThemeName = false
   # bgImg = ""
   # gitUrl = "https://github.com/1bl4z3r/hermit-V2/tree/staging"
@@ -122,25 +123,28 @@ expiryDate = ["expiryDate"]
   # usesAnimation = true
   
   [[params.socialLinks]]
-    name = "mastodon"
-    url = "https://joinmastodon.org/"
+    name = "custom-link-1"
+    url = "https://example.com"
+    logo = "/images/star-of-david.png"
 
   [[params.socialLinks]]
-    name = "x"
-    url = "https://twitter.com/"
+    name = "custom-link-2"
+    url = "https://another-example.com"
+    logo = "/images/cross.png"
 
   [[params.socialLinks]]
-    name = "github"
-    url = "https://github.com/1bl4z3r/hermit-V2/tree/staging"
+    name = "custom-link-3"
+    url = "https://another3-example.com"
+    logo = "/images/islam.png"
 
 [menu]
 
-  [[menu.main]]
-    name = "Posts"
-    url = "posts/"
-    weight = 10
+  # [[menu.main]]
+  #  name = "Posts"
+  #  url = "posts/"
+  #  weight = 10
 
-  [[menu.main]]
-    name = "About"
-    url = "about-hugo/"
-    weight = 20
+  # [[menu.main]]
+  #  name = "About"
+  #  url = "about-hugo/"
+  #  weight = 20
