Change submodule to my fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
 [submodule "themes/hermit-v2"]
 	path = themes/hermit-v2
-	url = https://github.com/1bl4z3r/hermit-V2
+	url = git@github.com:saleh-mehdikhani/hermit-V2.git
 	branch = main
+	
