--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "themes/hermit-v2"]
 	path = themes/hermit-v2
-	url = git@github.com:saleh-mehdikhani/hermit-V2.git
+	url = https://github.com/saleh-mehdikhani/hermit-V2.git
 	branch = main
 	
