--- a/hugo.toml
+++ b/hugo.toml
@@ -4,7 +4,7 @@
 # To see what each config does, refer to https://1bl4z3r.github.io/hermit-V2/en/posts/explaining-configs/
 # Open Issue or Pull Request at https://github.com/1bl4z3r/hermit-V2
 
-baseURL = "http://sameri.fi"
+baseURL = "https://sameri.fi"
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = true
 theme = "hermit-v2"
@@ -28,7 +28,7 @@ theme = "hermit-v2"
  
 languageCode = "en-us"
 
-title = "SAMeri"
+title = "SAMEri"
 # enableGitInfo = true
 
 pygmentsCodefences  = true
